--- a/chrisedem/src/index.css
+++ b/chrisedem/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-/* base styles */
+
 * {
   margin: 0;
   font-family: "Quicksand";
@@ -10,12 +10,12 @@
   padding: 20px;
   display: flex;
   align-items: center;
-  max-width: 600px;
+  max-width: 1000px;
   margin: 0 auto;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 2px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #35def1;
+  color: #00cfe6;
 }
 .navbar .links {
   margin-left: auto;
@@ -32,4 +32,32 @@
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
+}
+
+.Home {
+  position: absolute;
+ top: 5;
+  right: 5;
+  transform: translate(-20%, 0);
+  text-align: left;
+  margin-top: -60px;
+  
+ 
+}
+.wlcm{
+  color: #35d8f1;
+
+}
+.why{
+  color: #35d8f1;
+
+}
+.serv{
+  color: #35d8f1; 
+}
+.succ{
+  color: #35d8f1;
+}
+.down{
+  color: #35d8f1;
 }
