--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #212222;
     color: #c7c7c7;
+    text-align: center;
   }
   
   header {
@@ -19,32 +20,35 @@ body {
   }
 
   main {
-    max-width: 800px;
-    margin: 20px auto;
+    max-width: 1000px;
+    margin: 10px auto;
     padding: 20px;
+    text-align: center;
   }
 
 .hero {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./resources/Contact_hero.webp");
-    background-position: center;
-    background-repeat:no-repeat ;
-    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size:auto ;
     align-content: center;
     color: #c7c7c7;
+    font-size: x-large;
     text-align: center ;
-    height: 280px;
+    max-width: 100%;
+    height: 250px;
     padding: 20px;
     border-radius: 5px;
   }
 
   nav {
     background-color: #333;
-    overflow: hidden;
+    overflow:auto;
   }
 
   nav a {
-    float: left;
-    display: block;
+    float: inline-start;
+    display:block ;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -56,56 +60,7 @@ body {
     color: #c7c7c7;
   }
 
-  .dropdown {
-    float: left;
-    overflow: hidden;
-    margin-right: auto;
-  }
-
-  .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    margin-right: auto;
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #7c7979;
-    min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #494646;
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-  footer {
-    background-color: #2c3e50;
-    color: #fff;
+ .text {
     text-align: center;
-    padding: 1em;
-    position:relative;
-    bottom: 0;
-    width: 100%;
-  } 
+    padding: 12px;
+}
