--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
+/*LOGINPAGE*/
 .container{
     display:flex;
     align-items: center;
-    margin-left:120px;
+    margin-left:0px;
     padding-left:0px;
+
 
 }
 a.nav-link{
@@ -12,19 +14,23 @@ a.nav-link{
 
 
 div.me-auto.navbar-nav{
-    margin-left:280px;
+    
 }
 
 img.d-inline-block.align-top{
-    margin-right:0;
+    
+   
 }
 .login-container{
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 200px;
-    background-color: #cfd4d4;
+    background-color:  lightblue;
     padding-bottom: 30px;
+    width: 500px;
+    border-radius: 15px;
+    box-shadow: 1px 1px 5px;
 
 }  
 
@@ -36,20 +42,20 @@ img.d-inline-block.align-top{
     width: 100%;
     height:40px;
     margin-top: 30px;
-    border-bottom: 3px solid #504e4e;
+    
 }
 
 
 .login-text{
-    color:rgb(175, 183, 183);
-    font-size: 28px;
-    font-weight: 700px;
+    color:rgb(23, 23, 103);
+    font-size: 30px;
+    font-weight:bolder;
     text-align: center;
+
     
 }
 
 .box{
-
 }
  
 .login-input1{
@@ -72,6 +78,13 @@ img.d-inline-block.align-top{
     background-color: beige;
     border-radius: 6px;
     border: none;
+}
 
-
+.loginbutton{background-color: aliceblue;
+    margin-top: 20px;
+    border: solid 1px rgb(23, 23, 103);
+    padding: 5px 30px 5px 30px;
+    border-radius: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
