--- a/gradereport/src/App.css
+++ b/gradereport/src/App.css
@@ -8,7 +8,7 @@ header{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: aqua;
+  background-color: #ffe9d3;
   z-index: 99;
   }
 
