--- a/gradereport/src/loginform.css
+++ b/gradereport/src/loginform.css
@@ -6,4 +6,19 @@
 .cover{
 position: relative;
 top: 100px;
+left: 550px;
+top: 200px;
+background-color: #9eb6d7;
+width: 30em;
+height: 20em;
+position: relative;
+border-radius: 1em;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-around;
+}
+
+input{
+    border: none;
 }
