--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,13 @@ tr:nth-child(even) {
 #dashboardp {
   margin-left: 10px;
 }
+#helpandsupportbg {
+  margin-top: 10px;
+  padding-top: 20px;
+padding-bottom: 20px;
+  width: 97%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 /*Need tghe media Query because of the shrinkage*/
 @media (max-width: 580px) {
