--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+
 .App{
     display: grid;
     grid-template-columns: auto auto auto auto;
-    background: bisque;
     padding: 20px;
     column-gap: 10px;
     row-gap: 10px;
+    background-color: #333;
+    overflow: hidden;
+    font-family: Arial;
+    font-size: 19px;
 }
