--- a/index.css
+++ b/index.css
@@ -12,10 +12,10 @@ code {
     monospace;
 }
   
-body {
-  background-image:  url(https://www.shutterstock.com/image-photo/graduation-caps-thrown-air-260nw-658847998.jpg);
+ body {
+  
   font-family: Arial, sans-serif;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
   background-size:cover;
 }
 
@@ -438,4 +438,116 @@ h1 {
 
 .side-text button a:hover {
 color:blue; 
+} 
+.head {
+  display: flex;
+  justify-content: space-around;
+  margin-top:2%;
+}
+
+.grade {
+  width: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+  color: rgb(7, 7, 51);
+}
+
+.box {
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+
+h3 {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: blue;
+}
+
+li {
+  margin-bottom: 5px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 8px;
+  border: 1px solid #ccc;
+}
+
+thead {
+  background-color: #f5f5f5;
+}
+
+th {
+  font-weight: bold;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #eff;
+}
+
+tbody tr:hover {
+  background-color: #8d9daa;
+}
+.cour{
+  text-align: center;
+  margin-top:2%;
+  margin-bottom: 5%;
+}
+.profile-section {
+  display: flex;
+  align-items: center;
+  
+}
+
+.profile-picture {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  
+  background-image: url(https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTAxL3JtNjA5LXNvbGlkaWNvbi13LTAwMi1wLnBuZw.png);
+}
+
+.profile-picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.notification {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+}
+
+.warning {
+color: #000;
+}
+
+.icon {
+  margin-right: 5px;
+  color: red;
+}
+
+p {
+  margin: 0;
+}
+button{
+  background-color: rgb(202, 78, 78);
+  color: #eff;
+  border: none;
+  border-radius: 10px;
+}
+button:hover{
+  cursor: pointer;
 }
