--- a/public/landing/css/color-3.css
+++ b/public/landing/css/color-3.css
@@ -226,6 +226,15 @@ ul li {
     left: 8px
 }
 
+
+.invalid{
+    /* display: none; */
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 0.875em;
+  color: #c1002b;
+}
+
 @-webkit-keyframes scaleDisappear {
     0% {
         opacity: 1;
