--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -41,6 +41,11 @@ p {
   border: 2px solid rgb(30, 104, 188);
   border-radius: 5px;
 }
+#c-grades{
+  font-family: Roboto;
+  font-weight: bolder;
+  color: gray;
+}
 table {
   width: 620px;
   border-collapse: collapse;
