--- a/my-react/src/Home.css
+++ b/my-react/src/Home.css
@@ -53,6 +53,9 @@
      display: block;
      
   }  
+  .missing{
+    text-align: center;
+  }
    div h2{
      margin-bottom: 50px;
      border-bottom: blue;
@@ -62,7 +65,7 @@
   .topic-paragraph{
     background-color: #00357a;
     padding-top: 0px;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     color: white;
   }
   .image-content{
