--- a/react-frontend/src/styles/contactus.css
+++ b/react-frontend/src/styles/contactus.css
@@ -1,8 +1,6 @@
 .contact-us {
   background: url("../assets/contact.jpg");
-
   padding: 0;
-
   margin: 0;
   display: flex;
   justify-content: center;
@@ -13,9 +11,8 @@
   padding: 0;
 }
 
-.wrapper {
+.wrapper1 {
   width: 800px;
-  height: 60%;
   border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(30px);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
