--- a/Assignment 1/style.css
+++ b/Assignment 1/style.css
@@ -1,12 +1,12 @@
 
 
 .navbar{
-    background-color:burlywood;
+    background-color: rgb(137, 196, 230);;
     height: 1000px;
 
 }
 .container-fluid{
-    background-color:burlywood;
+    background-color: rgb(137, 196, 230);;
 }
 
 body {
