--- a/my-react-project/src/App.css
+++ b/my-react-project/src/App.css
@@ -6,5 +6,10 @@
 }
 
 body{
-  font-family: 'Bodoni Moda', serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container{
+  max-width: 85%;
+  margin: auto;
 }
