--- a/src/Styles/Help.css
+++ b/src/Styles/Help.css
@@ -1,12 +1,84 @@
 .he-container {
-    background-color: white;
-    position: relative;
-    top: -10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-    width: 100%;
-    height: 800px;
-  }
+  background-color: white;
+  position: relative;
+  top: -10px;
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 30px;
+  width: 100%;
+  height: 800px;
+}
+.FAQ {
+  color: rgb(44, 44, 44);
+  font-family: Roboto;
+  font-weight: bolder;
+  padding: 20px;
+  top: 150px;
+  left: 50px;
+  position: absolute;
+  background-color: rgb(30, 104, 188);
+  height: 470px;
+  width: 600px;
+}
+.contact-form {
+  color: rgb(44, 44, 44);
+  font-family: Roboto;
+  font-weight: bolder;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 150px;
+  position: absolute;
+  right: 100px;
+  background-color: rgb(30, 104, 188);
+  height: 500px;
+  width: 400px;
+}
+.contact-form h2 {
+  margin-top: 40px;
+}
+.main-sec {
+  margin-top: 25px;
+  width: 380px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.text-area {
+  width: 200px;
+  height: 100px;
+}
+.search-bar {
+  width: 300px;
+  height: 35px;
+}
+.search-btn {
+  height: 40px;
+}
+
+.input-box {
+  width: 200px;
+  height: 30px;
+  margin-bottom: 20px;
+}
+.submit {
+  width: 120px;
+  height: 30px;
+  margin-top: 20px;
+}
+.submit {
+  width: 100px;
+  height: 35px;
+  color: white;
+  background-color: rgb(44, 138, 44);
+  border: none;
+}
+
+.submit:hover {
+  background-color: white;
+  border: 1.5px solid rgb(44, 138, 44);
+  color: rgb(44, 138, 44);
+}
