--- a/missing_grade_/src/Pages/MissingGradeForm.css
+++ b/missing_grade_/src/Pages/MissingGradeForm.css
@@ -1,12 +1,21 @@
 /* MissingGradeForm.css */
 .missing-grade-form {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
     background-color: #f8f9fa;
     border: 1px solid #ced4da;
     border-radius: 8px;
+    
   }
+
+  .dash{
+    width: 100%;
+    height: 120vh;
+    align-items: center;
+    background-color: rgb(94, 105, 133);
+    
+}
   
   h2 {
     text-align: center;
