--- a/missing_grade_/src/Pages/dashboard.css
+++ b/missing_grade_/src/Pages/dashboard.css
@@ -62,10 +62,8 @@
     }
 }
 
-@media screen and (min-width: 900px) and (max-width: 1050px) {
-    .dashboard{
-        padding-bottom: 50%;
-    }.tab-1{
+@media screen and (min-width: 900px) and (max-width: 1920px) {
+   .tab-1{
         min-width: 90%;
         max-height: 100px;
     }
@@ -73,15 +71,16 @@
         max-width: 60px;
         font-size: 0.6rem;
     }
+    
 }
 
-.dashboard{
+.total{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: rgb(94, 105, 133);
+    background-color: #072a5a;
 }
 
 .tab-1{
@@ -138,14 +137,14 @@
 }
 
 .tab-2{
-    width: 920px;
+    width: 900px;
     margin: 30px;
     padding: 20px;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     background-color: white;
-    border-radius: 50px;
+    border-radius: 25px;
 }
 
 .tab-2-left{
@@ -162,8 +161,8 @@
     width: 400px;
     margin: 50px auto;
     padding-bottom: 20px;
-    background-image: linear-gradient(90deg, rgb(245, 201, 7), orange);
-    border-radius: 40px;
+    background-color: #a07d50;
+    border-radius: 20px;
 }
 
 .greeting-and-time{
@@ -183,7 +182,7 @@
     height: 160px;
     width: 120px;
     margin: 10px;
-    border-radius: 30px;
+    border-radius: 15px;
     border: 2px solid black;
     text-align: center;
     font-family: cursive;
@@ -192,8 +191,12 @@
 .card-title{
     margin: 50px auto;
     text-align: center;
+    color: #072a5a;
 }
 
+.upcoming{
+    color: #072a5a; 
+}
 .course-card{
     height: 60px;
     width: 300px;
@@ -202,7 +205,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: white;
     font-family: cursive;
 }
@@ -220,8 +223,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 20px;
-    background-image: linear-gradient(200deg, rgb(201, 24, 54), rgb(224, 55, 83));
+    border-radius: 15px;
+    background-color: #a07d50;
     color: white;
     font-family: cursive;
 }
@@ -234,3 +237,39 @@
 .event i, .course-card i{
     font-size: 1.8rem;
 }
+
+/*Styling only for grades page*/
+
+.grade-table{
+    width: 90%;
+    height: 100vh;
+}
+
+thead{
+    text-align: left;
+}
+
+.courses{
+    width: 60%;
+}
+
+.exams-score{
+    width: 15%;
+}
+
+.grades{
+    width: 15%;
+}
+
+/*Styling only for help page*/
+.help-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+h2{
+    color:#072a5a ;
+}
+
