--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,14 @@
   text-align: center;
 }
 
+.map{
+ 
+ display: block;
+ width: 100%;
+ position: static;
+
+
+}
 .landing-page{
   background: url(images/map.jpg);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -19,5 +27,36 @@
 .contact{
   font-family: Arial, Helvetica, sans-serif;
 
+}
+
+.hold{
+  background-color: rgb(106, 106, 120);
+  margin:10px;
+  border-radius: 12px;
+}
+
+.input{
+  background-color: rgb(106, 106, 120);
+  margin:10px;
+  border-radius: 12px;
+}
+  
+.login{
+  margin-top: 10px;
+  background-color: rgb(214, 159, 190);
+  width:500px;
+  height: 250px;
+  border-radius: 50px;
+}
+
+.new{
+  background-color: rgb(109, 133, 133);
+  display: flex;
+  border: 10px;
+  margin: 15px;
+  width: 480px;
+  height:45px;
+  border-radius: 20px;
+  padding: 10px;
 }
 
