--- a/missing-grade-reporting-system/src/components/LoginPage/LoginPage.css
+++ b/missing-grade-reporting-system/src/components/LoginPage/LoginPage.css
@@ -1,5 +1,19 @@
+.container {
+    background-color: rgb(18, 9, 56);
+    padding-top: 70px;
+    height: 100vh;
+
+}
 .main {
-    margin-top: 30px;
+    margin-top: 150px;
+    background-color: #fff;
+    width: 600px;
+    margin: auto;
+    border-radius: 5px;
+    border: 1px solid;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    
     
 }
 .user1{
@@ -50,7 +64,7 @@
     font-size: 20px;
     color: #fff;
     font-weight: 700;
-    margin-left: 600px;
+    margin-left: 235px;
 
 }
 .log2{
