--- a/missing-grade-reporting-system/src/components/Navbar/NavBar.css
+++ b/missing-grade-reporting-system/src/components/Navbar/NavBar.css
@@ -56,6 +56,31 @@
     font-size: 1.3 rem;
     font-weight: 600;
   }
+  .li-border.li-border::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    border-radius: 8px;
+    background-color: #000000; /* Black color */
+    transform: scaleX(0); /* Initially hidden */
+    transform-origin: bottom right;
+    transition: transform 0.6s ease-out;
+    
+  }
+
+  .li-border.li-border:hover {
+    color: #000;
+  }
+
+  .li-border.li-border:hover:after{
+    transform: scaleX(1); /* Show the underline on hover */
+    transform-origin: bottom left;
+    
+  }
+ 
   
   a {
     text-decoration: none;
